# chunkify

./: .gitignore  Cargo.toml  README.md  readme.md
.github/workflows/: rust.yml
src/: cfg.rs  enum.rs  impl.rs  lib.rs  static.rs  struct.rs  test.rs  trait.rs  type.rs
src/chunk/: const.rs  error.rs  impl.rs  lazy.rs  mod.rs  trait.rs  type.rs
tests/: mod.rs
tests/strategy/: fn.rs
