[package]
name = "chunkify"
version = "0.6.29"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A simple and efficient chunking library for Rust."""
keywords = ["http", "file", "chunk", "upload", "web"]
repository = "https://github.com/eastspire/chunkify.git"
categories = ["network-programming", "web-programming"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github",
    "logs",
    "uploads",
    "**/*.log",
]

[dependencies]
file-operation = "0.8.1"
once_cell = "1.21.3"
dashmap = "6.1.0"
tokio = { version = "1.47.1", features = ["full"] }
twox-hash = "2.1.1"

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
